--- a/styles/app.css
+++ b/styles/app.css
@@ -5,6 +5,7 @@
   border-radius: 5px;
   height: 140px;
   margin-right: 20px;
+  background-color: red;
 }
 
 .covered {
@@ -13,4 +14,8 @@
 
 .hand {
   overflow: auto;
+}
+
+body {
+	background-color: green;
 }
